# pooledchannel

./: .travis.yml  CMakeLists.txt  README.md
examples/: CMakeLists.txt  dispatcher.cpp  ipcpooledchanneltest.cpp  ipcpooledchanneltestC.cpp  ipcpooledchanneltestS.cpp  pooledchanneltest.cpp  pubsub.cpp  termination.cpp
include/: ipcpooledchannel.hpp  pooledchannel.hpp  pooledchannel_event.hpp
